# tree-sitter-asm

./: CMakeLists.txt  Cargo.toml  go.mod
bindings/c/: tree-sitter-asm.pc.in
bindings/go/: binding_test.go
bindings/rust/: build.rs  lib.rs
